now visible to the outside world, fixing issues

--- a/public/main.css
+++ b/public/main.css
@@ -7,7 +7,7 @@ html, body {
 }
 
 .hero {
-  /*background: url('https://github.com/sgreenholtz/personal-website/blob/master/enchanted-forest.jpg?raw=true') */
+  background: url('/enchanted-forest.jpg');
   background-color: green;
   background-size: cover;
   width: 100vw;
@@ -45,6 +45,10 @@ html, body {
 
 .col-3 {
   width: 30%;
+}
+
+.col-1 {
+  width: 100vw;
 }
 
 .flex-section {
